--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">GitHub Demo App</string>
     <string name="home_screen_text">Hello GitHub!</string>
-    <string name="home_btn_text">Clicke Me</string>
+    <string name="home_btn_text">Click Me</string>
 </resources>
